--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,49 @@
-numpy~=1.20.1
-torch~=1.8.1
-filelock~=3.0.12
-scikit-learn~=0.24.1
-pandas~=1.2.3
-jax~=0.2.10
-scipy~=1.6.1
-requests~=2.25.1
-joblib~=1.0.1
-click~=7.1.2
-jaxlib==0.1.65
+absl-py==1.0.0
+cachetools==5.0.0
+certifi==2021.10.8
+chardet==4.0.0
+click==7.1.2
+cycler==0.11.0
+filelock==3.0.12
+flatbuffers==2.0
+fonttools==4.31.1
+google-auth==2.6.2
+google-auth-oauthlib==0.4.6
+grpcio==1.44.0
+idna==2.10
+importlib-metadata==4.11.3
+jax==0.2.28
+jaxlib==0.1.74
+joblib==1.0.1
+kiwisolver==1.4.0
+Markdown==3.3.6
+matplotlib==3.5.1
+numpy==1.20.3
+oauthlib==3.2.0
+opt-einsum==3.3.0
+packaging==21.3
+pandas==1.2.5
+Pillow==9.0.1
+protobuf==3.19.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==3.0.7
+python-dateutil==2.8.2
+pytz==2022.1
+requests==2.25.1
+requests-oauthlib==1.3.1
+rsa==4.8
+scikit-learn==0.24.2
+scipy==1.6.3
+seaborn==0.11.2
+six==1.16.0
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+threadpoolctl==3.1.0
+torch==1.8.1
+tqdm==4.63.0
+typing_extensions==4.1.1
+urllib3==1.26.9
+Werkzeug==2.0.3
+zipp==3.7.0
